--- a/test/fixtures/admins.yml
+++ b/test/fixtures/admins.yml
@@ -1,13 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  email: MyString
-  encrypted_password: MyString
-  created_at: 2021-09-06 14:46:04
-  updated_at: 2021-09-06 14:46:04
-
-two:
-  email: MyString
-  encrypted_password: MyString
-  created_at: 2021-09-06 14:46:04
-  updated_at: 2021-09-06 14:46:04
+# This model initially had no columns defined. If you add columns to the
+# model remove the '{}' from the fixture names and add the columns immediately
+# below each fixture, per the syntax in the comments below
+#
+one: {}
+# column: value
+#
+two: {}
+# column: value
